<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WordMateX</string>
    <string name="error">Error</string>
    <string name="dict_dialog">Choose a dictionary</string>
    <string name="error_format">Incorrect format.</string>
    <string name="error_format_version">The version of dictionary format is too high, please upgrade WordMate to use it.</string>
    <string name="stardict_index">Generating index for StarDict dictionary…</string>
    <string name="stardict_dz">The file is compressed, please decompress it first.</string>
    <string name="about">About</string>
    <string name="dict_info">Dict info</string>
    <string name="settings">Settings</string>
    <string name="prev">Prev word</string>
    <string name="next">Next word</string>
    <string name="update">A new version of WordMate is available.\n\nDo you want to update now?\n</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_dict">No dictionary data files.</string>
    <string name="no_sdcard">No SD card.\n\nPlease insert an SD card.</string>
    <string name="no_result">Sorry, no results found.</string>
    <string name="loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="connection_error">Connection error</string>
    <string name="downloader">Dict downloader</string>
    <string name="download">Download</string>
    <string name="cancel_download">Cancel download</string>
    <string name="downloads">downloads</string>
    <string name="overwrite">The file already exists.\n\nDo you want to overwrite it?\n</string>
    <string name="extract">Extract</string>
    <string name="enable_wordlist">Enable Wordlist</string>
    <string name="notify_update">Notify me for update</string>
    <string name="title_activity_main_new">MainNewActivity</string>
    <string name="action_sort">Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="sample_title">Title</string>
    <string name="about_msg">Version : %1$s Build : %2$s  Copyright 2009 Hongbo All rights reserved  http://www.wordmate.net hongbo@wordmate.net</string>
    <string name="sample_size">size</string>
    <string name="sample_name">Name</string>
    <string name="sample_size_1">100 KB</string>
    <string name="sample_date">01.01.2010</string>
    <string name="modified">Modified</string>
    <string name="size">Size</string>
    <string name="format_size">%,d KB</string>
    <string name="format_date">%1$02d/%2$02d/%3$d %4$d:%5$02d</string>
    <string name="info">Info</string>
    <string name="words">Words</string>
    <string name="sample_words">100000</string>
    <string name="sample_info">Info</string>
</resources>
