<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".WordMateX">

    <item
        android:id="@+id/action_dictionary"
        android:icon="@drawable/ic_book_white_24dp"
        android:title="@string/action_dict"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about"
        android:alphabeticShortcut='a'
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:alphabeticShortcut='s'
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_dict_downloader"
        android:alphabeticShortcut='d'
        android:title="@string/downloader"
        app:showAsAction="never"/>

    <group
        android:id="@+id/group_info">
        <item
            android:id="@+id/action_dict_info"
            android:alphabeticShortcut='i'
            android:title="@string/dict_info"
            app:showAsAction="never"/>
    </group>

    <group
        android:id="@+id/group_words">
        <item
            android:id="@+id/action_prev_word"
            android:alphabeticShortcut='n'
            android:icon="@android:drawable/arrow_up_float"
            android:title="@string/prev"
            app:showAsAction="never|always"/>

        <item
            android:id="@+id/action_next_word"
            android:alphabeticShortcut='m'
            android:icon="@android:drawable/arrow_down_float"
            android:title="@string/next"
            app:showAsAction="never|always"/>
    </group>
</menu>
