<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/title_bar"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sample_name"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_size"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sample_size_1"/>

            <!--<LinearLayout-->
                <!--style="?android:attr/listSeparatorTextViewStyle" -->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" >-->

            <!--</LinearLayout>-->

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sample_date"/>
        </LinearLayout>
    </ScrollView>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:drawable/bottom_bar">-->

        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</LinearLayout>-->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/download"/>

</LinearLayout>